--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ loginForm.addEventListener('submit', function(e) {
         // Guardar usuario activo y redirigir a tu álbum
         localStorage.setItem('usuarioActivo', usuario);
         setTimeout(() => {
-            window.location.href = 'album.html'; // tu página de álbum
+            window.location.href = 'lcdm.html'; // tu página de álbum
         }, 1000);
     } else {
         mensajeLogin.textContent = "Contraseña incorrecta";
@@ -247,3 +247,4 @@ loginForm.addEventListener('submit', function(e) {
 <script src="script.js"></script>
 </body>
 </html>
+
