--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ loginForm.addEventListener('submit', function(e) {
 
 <div class="album-container">
     <!-- Cambia el enlace por tu GitHub Pages -->
-    <iframe src="https://briancristaldo2021-creator.github.io/lcdm1/"></iframe>
+    <iframe src="https://briancristaldo2021-creator.github.io/pagina/lcdm.html/"></iframe>
 </div>
 
-<a class="open-link" href="https://briancristaldo2021-creator.github.io/lcdm1/" target="_blank">
+<a class="open-link" href="https://briancristaldo2021-creator.github.io/pagina/lcdm.html/" target="_blank">
     Abrir Álbum en Nueva Pestaña
 </a>
 
@@ -247,4 +247,5 @@ loginForm.addEventListener('submit', function(e) {
 <script src="script.js"></script>
 </body>
 </html>
+
 
