--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </div>
 <!-- Logo al inicio -->
 <div id="logo-container">
-    <img src="img/logo.png" alt="Logo Los LCDM" id="logo">
+    <img src="https://ibb.co/gHRdmcM" alt="Logo Los LCDM" id="logo">
 </div>
 
 <style>
@@ -199,5 +199,6 @@
 
 </body>
 </html>
+
 
 
