--- a/index.html
+++ b/index.html
@@ -3,213 +3,75 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Álbum de Los LCDM</title>
+<title>Bienvenido al Álbum de Los LCDM</title>
 <style>
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-  body {
-    font-family: 'Arial', sans-serif;
-    background-color: #0d0d0d;
-    color: #00ffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-
-  /* Bienvenida */
-  #bienvenida {
-    position: fixed;
-    top:0; left:0; width:100%; height:100%;
-    background:#000;
-    display:flex; flex-direction:column;
-    justify-content:center; align-items:center;
-    color:#00ffff; font-size:2rem; text-align:center;
-    z-index:1000; opacity:1; transition:opacity 1.5s ease;
-  }
-  #bienvenida button {
-    margin-top:20px; padding:10px 20px;
-    font-size:1rem; background:#00ffff; border:none;
-    border-radius:8px; cursor:pointer; color:#0d0d0d;
-    transition:all 0.3s;
-  }
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body { font-family:'Arial', sans-serif; background:#0d0d0d; color:#00ffff; display:flex; justify-content:center; align-items:center; min-height:100vh; flex-direction:column; }
+  #bienvenida { position:fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; font-size:2rem; text-align:center; z-index:1000; opacity:1; transition:opacity 1.5s ease;}
+  #bienvenida button { margin-top:20px; padding:10px 20px; font-size:1rem; background:#00ffff; border:none; border-radius:8px; cursor:pointer; color:#0d0d0d; transition:all 0.3s; }
   #bienvenida button:hover { background:#009999; }
-
-  /* Logo */
-  #logo-container {
-    position: fixed; top:20px; left:50%;
-    transform:translateX(-50%); z-index:1100;
-  }
-  #logo { max-width:150px; height:auto; cursor:pointer; transition: transform 0.3s; }
-  #logo:hover { transform: scale(1.1); }
-
-  /* Login */
-  #login-container {
-    display:none; flex-direction:column; align-items:center;
-    background:#111; padding:30px; border-radius:12px;
-    box-shadow:0 0 20px #00ffff; margin-top:20px;
-  }
-  #login-container h2 { margin-bottom:20px; }
+  #login-container { display:none; flex-direction:column; align-items:center; background:#111; padding:30px; border-radius:12px; box-shadow:0 0 20px #00ffff; margin-top:20px; }
   #login-container input { margin:10px 0; padding:10px; width:250px; border-radius:6px; border:none; }
-  #login-container button {
-    margin-top:10px; padding:10px 20px; border-radius:6px; border:none;
-    background:#00ffff; color:#0d0d0d; font-weight:bold; cursor:pointer; transition:all 0.3s;
-  }
+  #login-container button { margin-top:10px; padding:10px 20px; border-radius:6px; border:none; background:#00ffff; color:#0d0d0d; font-weight:bold; cursor:pointer; transition:all 0.3s; }
   #login-container button:hover { background:#009999; color:white; }
   #mensaje { margin-top:10px; font-weight:bold; }
-
-  /* Album */
-  #album { display:none; flex-wrap:wrap; justify-content:center; margin-top:20px; gap:20px; width:90%; max-width:800px; }
-  .figurita { background:#111; border-radius:8px; padding:10px; box-shadow:0 0 10px #00ffff; text-align:center; transition: transform 0.5s; }
-  .figurita img { width:120px; border-radius:6px; margin-bottom:5px; }
-  .coleccionada { border:3px solid green; transform: scale(1.1); }
-  
-  /* Contador */
-  #contador { margin-top:20px; font-size:1.2rem; font-weight:bold; }
-
-  /* Botón reinicio */
-  #reiniciar { margin-top:15px; padding:8px 16px; border:none; border-radius:6px; background:#ff00ff; color:#0d0d0d; cursor:pointer; font-weight:bold; transition:all 0.3s; }
-  #reiniciar:hover { background:#990099; color:white; }
-
-  /* Premio */
-  #premio {
-    display:none; margin-top:20px; padding:20px;
-    background: #00ffff; color:#0d0d0d; font-size:1.5rem;
-    border-radius:12px; font-weight:bold; box-shadow:0 0 20px #00ffff;
-    text-align:center;
-    animation: pulse 1s infinite alternate;
-  }
-  @keyframes pulse { from { transform:scale(1); } to { transform:scale(1.1); } }
 </style>
 </head>
 <body>
 
-<!-- Bienvenida -->
 <div id="bienvenida">
   <h1>¡Bienvenido al Álbum de Los LCDM!</h1>
   <p>Registrate o inicia sesión para comenzar</p>
   <button onclick="cerrarBienvenida()">Comenzar</button>
 </div>
 
-<!-- Logo -->
-<div id="logo-container">
-  <a href="https://ibb.co/gHRdmcM" target="_blank">
-    <img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo">
-  </a>
-</div>
-
-<!-- Login -->
 <div id="login-container">
   <h2>Registro / Login</h2>
-  <input type="text" id="usuario" placeholder="Usuario" required>
-  <input type="password" id="password" placeholder="Contraseña" required>
+  <input type="text" id="usuario" placeholder="Usuario">
+  <input type="password" id="password" placeholder="Contraseña">
   <button onclick="registrarOLogin()">Ingresar</button>
   <p id="mensaje"></p>
 </div>
 
-<!-- Album -->
-<div id="contador"></div>
-<div id="album"></div>
-<button id="reiniciar" onclick="reiniciarAlbum()">Reiniciar Colección</button>
-<div id="premio">🎉 ¡Completaste el álbum! Reclama tu premio 🎉</div>
-
 <script>
-  function cerrarBienvenida(){
-    const overlay=document.getElementById('bienvenida');
-    overlay.style.opacity=0;
-    setTimeout(()=>{
-      overlay.style.display='none';
-      document.getElementById('login-container').style.display='flex';
-    },1500);
+function cerrarBienvenida(){
+  const overlay=document.getElementById('bienvenida');
+  overlay.style.opacity=0;
+  setTimeout(()=>{ 
+    overlay.style.display='none';
+    document.getElementById('login-container').style.display='flex';
+  },1500);
+}
+
+function registrarOLogin(){
+  const usuario=document.getElementById('usuario').value.trim();
+  const password=document.getElementById('password').value.trim();
+  const mensaje=document.getElementById('mensaje');
+
+  if(!usuario || !password){
+    mensaje.textContent="Completa todos los campos";
+    mensaje.style.color="red"; 
+    return;
   }
 
-  // Registro/Login
-  function registrarOLogin(){
-    const usuario=document.getElementById('usuario').value.trim();
-    const password=document.getElementById('password').value.trim();
-    const mensaje=document.getElementById('mensaje');
-    if(!usuario || !password){ mensaje.textContent="Completa todos los campos"; mensaje.style.color="red"; return; }
-    const key='user_'+usuario;
-    const datosGuardados=localStorage.getItem(key);
-    if(datosGuardados){
-      const userObj=JSON.parse(datosGuardados);
-      if(userObj.password===password){
-        localStorage.setItem('usuarioActivo',usuario);
-        mostrarAlbum();
-      } else { mensaje.textContent="Contraseña incorrecta"; mensaje.style.color="red"; }
-    } else {
-      localStorage.setItem(key,JSON.stringify({usuario,password,figuritas:[]})); 
+  const key='user_'+usuario;
+  const datosGuardados=localStorage.getItem(key);
+
+  if(datosGuardados){
+    const userObj=JSON.parse(datosGuardados);
+    if(userObj.password===password){
       localStorage.setItem('usuarioActivo',usuario);
-      mostrarAlbum();
+      window.location.href="album.html";
+    } else {
+      mensaje.textContent="Contraseña incorrecta"; 
+      mensaje.style.color="red";
     }
+  } else {
+    localStorage.setItem(key, JSON.stringify({usuario,password,figuritas:[]})); 
+    localStorage.setItem('usuarioActivo',usuario);
+    window.location.href="album.html";
   }
-
-  // Figuritas
-  const figuritasDisponibles=[
-    {id:1,img:"https://i.ibb.co/2W5CjJ2/fig1.png"},
-    {id:2,img:"https://i.ibb.co/L9b9p0n/fig2.png"},
-    {id:3,img:"https://i.ibb.co/0rZt6pz/fig3.png"},
-    {id:4,img:"https://i.ibb.co/1Xf5NfD/fig4.png"},
-    {id:5,img:"https://i.ibb.co/v3sNw5G/fig5.png"}
-  ];
-
-  function mostrarAlbum(){
-    document.getElementById('login-container').style.display='none';
-    const album=document.getElementById('album');
-    album.style.display='flex';
-    album.innerHTML='';
-    const usuario=localStorage.getItem('usuarioActivo');
-    if(!usuario) return;
-    const datos=JSON.parse(localStorage.getItem('user_'+usuario));
-    figuritasDisponibles.forEach(f=>{
-      const div=document.createElement('div');
-      div.classList.add('figurita');
-      if(datos.figuritas.includes(f.id)) div.classList.add('coleccionada');
-      div.innerHTML=`<img src="${f.img}" alt="Figurita ${f.id}"><p>Figurita ${f.id}</p>`;
-      album.appendChild(div);
-    });
-    actualizarContador(datos.figuritas.length);
-    if(datos.figuritas.length===5) document.getElementById('premio').style.display='block';
-  }
-
-  function actualizarContador(cantidad){
-    const contador=document.getElementById('contador');
-    contador.textContent=`Figuritas coleccionadas: ${cantidad}/5`;
-  }
-
-  // Detectar QR
-  function agregarFiguritaDesdeQR(){
-    const params=new URLSearchParams(window.location.search);
-    const id=parseInt(params.get('figurita'));
-    if(!id) return;
-    const usuario=localStorage.getItem('usuarioActivo');
-    if(!usuario){ alert("Debes iniciar sesión para escanear la figurita."); return; }
-    const key='user_'+usuario;
-    const datos=JSON.parse(localStorage.getItem(key));
-    if(!datos.figuritas.includes(id)){
-      datos.figuritas.push(id);
-      localStorage.setItem(key,JSON.stringify(datos));
-      alert(`¡Figurita ${id} agregada a tu colección!`);
-    }
-    mostrarAlbum();
-  }
-
-  function reiniciarAlbum(){
-    const usuario=localStorage.getItem('usuarioActivo');
-    if(!usuario) return;
-    const key='user_'+usuario;
-    const datos=JSON.parse(localStorage.getItem(key));
-    datos.figuritas=[];
-    localStorage.setItem(key,JSON.stringify(datos));
-    document.getElementById('premio').style.display='none';
-    mostrarAlbum();
-  }
-
-  window.onload=function(){
-    agregarFiguritaDesdeQR();
-    const usuario=localStorage.getItem('usuarioActivo');
-    if(usuario) mostrarAlbum();
-  }
+}
 </script>
 
 </body>
