--- a/index.html
+++ b/index.html
@@ -6,25 +6,88 @@
 <title>Bienvenido al Álbum de Los LCDM</title>
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
-  body { font-family:'Arial', sans-serif; background:#0d0d0d; color:#00ffff; display:flex; justify-content:center; align-items:center; min-height:100vh; flex-direction:column; }
-  #bienvenida { position:fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; font-size:2rem; text-align:center; z-index:1000; opacity:1; transition:opacity 1.5s ease;}
-  #bienvenida button { margin-top:20px; padding:10px 20px; font-size:1rem; background:#00ffff; border:none; border-radius:8px; cursor:pointer; color:#0d0d0d; transition:all 0.3s; }
+
+  body { 
+    font-family:'Arial', sans-serif; 
+    background:#0d0d0d; 
+    color:#00ffff; 
+    display:flex; 
+    justify-content:center; 
+    align-items:center; 
+    min-height:100vh; 
+    flex-direction:column; 
+  }
+
+  /* Logo arriba */
+  #logo-container {
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+  }
+  #logo {
+    max-width: 150px;
+    height: auto;
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
+  #logo:hover { transform: scale(1.1); }
+
+  /* Overlay de bienvenida */
+  #bienvenida { 
+    position:fixed; top:0; left:0; width:100%; height:100%;
+    background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center;
+    font-size:2rem; text-align:center; z-index:1000; opacity:1; transition:opacity 1.5s ease;
+  }
+  #bienvenida button { 
+    margin-top:20px; padding:10px 20px; font-size:1rem; 
+    background:#00ffff; border:none; border-radius:8px; cursor:pointer; color:#0d0d0d; transition:all 0.3s; 
+  }
   #bienvenida button:hover { background:#009999; }
-  #login-container { display:none; flex-direction:column; align-items:center; background:#111; padding:30px; border-radius:12px; box-shadow:0 0 20px #00ffff; margin-top:20px; }
-  #login-container input { margin:10px 0; padding:10px; width:250px; border-radius:6px; border:none; }
-  #login-container button { margin-top:10px; padding:10px 20px; border-radius:6px; border:none; background:#00ffff; color:#0d0d0d; font-weight:bold; cursor:pointer; transition:all 0.3s; }
+
+  /* Cuadro login/registro centrado */
+  #login-container {
+    display:none;
+    flex-direction:column;
+    align-items:center;
+    background:#111;
+    padding:40px;
+    border-radius:12px;
+    box-shadow:0 0 20px #00ffff;
+    margin-top:80px;
+    width:300px;
+    text-align:center;
+  }
+  #login-container h2 { margin-bottom:20px; }
+  #login-container input {
+    margin:10px 0; padding:10px; width:100%; border-radius:6px; border:none;
+  }
+  #login-container button {
+    margin-top:10px; padding:10px 20px; border-radius:6px; border:none;
+    background:#00ffff; color:#0d0d0d; font-weight:bold; cursor:pointer; transition:all 0.3s;
+  }
   #login-container button:hover { background:#009999; color:white; }
   #mensaje { margin-top:10px; font-weight:bold; }
 </style>
 </head>
 <body>
 
+<!-- Logo arriba -->
+<div id="logo-container">
+    <a href="https://ibb.co/gHRdmcM" target="_blank">
+        <img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo">
+    </a>
+</div>
+
+<!-- Overlay de bienvenida -->
 <div id="bienvenida">
   <h1>¡Bienvenido al Álbum de Los LCDM!</h1>
   <p>Registrate o inicia sesión para comenzar</p>
   <button onclick="cerrarBienvenida()">Comenzar</button>
 </div>
 
+<!-- Login / Registro -->
 <div id="login-container">
   <h2>Registro / Login</h2>
   <input type="text" id="usuario" placeholder="Usuario">
@@ -34,44 +97,60 @@
 </div>
 
 <script>
-function cerrarBienvenida(){
-  const overlay=document.getElementById('bienvenida');
-  overlay.style.opacity=0;
-  setTimeout(()=>{ 
-    overlay.style.display='none';
-    document.getElementById('login-container').style.display='flex';
-  },1500);
-}
-
-function registrarOLogin(){
-  const usuario=document.getElementById('usuario').value.trim();
-  const password=document.getElementById('password').value.trim();
-  const mensaje=document.getElementById('mensaje');
-
-  if(!usuario || !password){
-    mensaje.textContent="Completa todos los campos";
-    mensaje.style.color="red"; 
-    return;
+  // ==========================================
+  // Cerrar overlay
+  // ==========================================
+  function cerrarBienvenida() {
+    const overlay = document.getElementById('bienvenida');
+    overlay.style.opacity = 0;
+    setTimeout(() => {
+        overlay.style.display = 'none';
+        document.getElementById('login-container').style.display = 'flex';
+    }, 1500);
   }
 
-  const key='user_'+usuario;
-  const datosGuardados=localStorage.getItem(key);
+  // ==========================================
+  // Registro / Login
+  // ==========================================
+  function registrarOLogin() {
+    const usuario = document.getElementById('usuario').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const mensaje = document.getElementById('mensaje');
 
-  if(datosGuardados){
-    const userObj=JSON.parse(datosGuardados);
-    if(userObj.password===password){
-      localStorage.setItem('usuarioActivo',usuario);
-      window.location.href="album.html";
-    } else {
-      mensaje.textContent="Contraseña incorrecta"; 
-      mensaje.style.color="red";
+    if(!usuario || !password){
+        mensaje.textContent = "Completa todos los campos";
+        mensaje.style.color = "red";
+        return;
     }
-  } else {
-    localStorage.setItem(key, JSON.stringify({usuario,password,figuritas:[]})); 
-    localStorage.setItem('usuarioActivo',usuario);
-    window.location.href="album.html";
+
+    const key = 'user_' + usuario;
+    const datosGuardados = localStorage.getItem(key);
+
+    if(datosGuardados){
+        const userObj = JSON.parse(datosGuardados);
+        if(userObj.password === password){
+            localStorage.setItem('usuarioActivo', usuario);
+            window.location.href = 'album.html';
+        } else {
+            mensaje.textContent = "Contraseña incorrecta";
+            mensaje.style.color = "red";
+        }
+    } else {
+        localStorage.setItem(key, JSON.stringify({usuario, password, figuritas: []}));
+        localStorage.setItem('usuarioActivo', usuario);
+        window.location.href = 'album.html';
+    }
   }
-}
+
+  // ==========================================
+  // Evento Enter para login
+  // ==========================================
+  document.getElementById('password').addEventListener('keypress', function(e) {
+      if(e.key === 'Enter') registrarOLogin();
+  });
+  document.getElementById('usuario').addEventListener('keypress', function(e) {
+      if(e.key === 'Enter') registrarOLogin();
+  });
 </script>
 
 </body>
