--- a/lcdm.html
+++ b/lcdm.html
@@ -3,49 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Álbum de Los LCDM</title>
-<style>
-  /* Estilos generales */
-  body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #0000ff; /* Fondo azul */
-    overflow: hidden; /* Evita scroll durante la animación */
-  }
-
-  /* Overlay de bienvenida */
-  #overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000; /* Fondo negro para la animación */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 2.5em;
-    opacity: 1;
-    z-index: 1000;
-    transition: opacity 2s ease;
-  }
-
-  /* Contenido del álbum */
-  #album {
-    opacity: 0;
-    transition: opacity 2s ease;
-    padding: 20px;
-    text-align: center;
-    color: white;
-  }
-
-  /* Para cuando se muestre el álbum */
-  #album.visible {
-    opacity: 1;
-  }
-</style>
+<title>Álbum Completo LCDM</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -54,24 +13,21 @@
 <div id="album">
   <h1>¡Explorá el Álbum!</h1>
   <p>Aquí van las fotos y recuerdos de Los LCDM.</p>
-  <!-- Acá podés poner tus imágenes, galerías o contenido del álbum -->
+  <!-- Podes agregar más imágenes o contenido aquí -->
 </div>
 
 <script>
-  // Espera 3 segundos y luego hace el efecto de esfumar
-  setTimeout(() => {
-    const overlay = document.getElementById('overlay');
-    const album = document.getElementById('album');
-    
-    overlay.style.opacity = 0; // Se esfuma el overlay
+setTimeout(() => {
+  const overlay = document.getElementById('overlay');
+  const album = document.getElementById('album');
 
-    // Después de la transición, ocultamos el overlay y mostramos el álbum
-    setTimeout(() => {
-      overlay.style.display = 'none';
-      album.classList.add('visible');
-      document.body.style.overflow = 'auto'; // Habilita scroll si hay contenido
-    }, 2000); // Debe coincidir con la transición de CSS
-  }, 3000); // Tiempo que permanece el mensaje
+  overlay.style.opacity = 0;
+  setTimeout(() => {
+    overlay.style.display = 'none';
+    album.classList.add('visible');
+    document.body.style.overflow = 'auto';
+  }, 2000);
+}, 3000);
 </script>
 
 </body>
