--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
 <!-- Logo arriba -->
 <div id="logo-container">
-    <img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo">
+    <a href="https://ibb.co/gHRdmcM" target="_blank">
+        <img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo">
+    </a>
 </div>
 
 <!-- Overlay de bienvenida -->
@@ -84,6 +86,7 @@
   <p>Registrate o inicia sesión para comenzar</p>
   <button onclick="cerrarBienvenida()">Comenzar</button>
 </div>
+
 <!-- Login / Registro -->
 <div id="login-container">
   <h2>Registro / Login</h2>
@@ -91,63 +94,63 @@
   <input type="password" id="password" placeholder="Contraseña">
   <button onclick="registrarOLogin()">Ingresar</button>
   <p id="mensaje"></p>
-  <p>¿No tenés cuenta? <a href="registro.html">Registrate aquí</a></p>
 </div>
 
 <script>
-
-// ==============================
-// Overlay de bienvenida
-// ==============================
-function cerrarBienvenida() {
-  const overlay = document.getElementById('bienvenida');
-  overlay.style.opacity = 0;
-  setTimeout(() => {
-    overlay.style.display = 'none';
-    document.getElementById('login-container').style.display = 'flex';
-  }, 1000);
-}
-
-// ==============================
-// Registro / Login
-// ==============================
-function registrarOLogin() {
-  const usuario = document.getElementById('usuario').value.trim();
-  const password = document.getElementById('password').value.trim();
-  const mensaje = document.getElementById('mensaje');
-
-  if(!usuario || !password){
-      mensaje.textContent = "Completa todos los campos";
-      mensaje.style.color = "red";
-      return;
+  // ==========================================
+  // Cerrar overlay
+  // ==========================================
+  function cerrarBienvenida() {
+    const overlay = document.getElementById('bienvenida');
+    overlay.style.opacity = 0;
+    setTimeout(() => {
+        overlay.style.display = 'none';
+        document.getElementById('login-container').style.display = 'flex';
+    }, 1500);
   }
 
-  const key = 'user_' + usuario;
-  const datosGuardados = localStorage.getItem(key);
+  // ==========================================
+  // Registro / Login
+  // ==========================================
+  function registrarOLogin() {
+    const usuario = document.getElementById('usuario').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const mensaje = document.getElementById('mensaje');
 
-  if(datosGuardados){
-      const userObj = JSON.parse(datosGuardados);
-      if(userObj.password === password){
-          localStorage.setItem('usuarioActivo', usuario);
-          window.location.href = 'album.html';
-      } else {
-          mensaje.textContent = "Contraseña incorrecta";
-          mensaje.style.color = "red";
-      }
-  } else {
-      localStorage.setItem(key, JSON.stringify({usuario, password, figuritas: []}));
-      localStorage.setItem('usuarioActivo', usuario);
-      window.location.href = 'album.html';
+    if(!usuario || !password){
+        mensaje.textContent = "Completa todos los campos";
+        mensaje.style.color = "red";
+        return;
+    }
+
+    const key = 'user_' + usuario;
+    const datosGuardados = localStorage.getItem(key);
+
+    if(datosGuardados){
+        const userObj = JSON.parse(datosGuardados);
+        if(userObj.password === password){
+            localStorage.setItem('usuarioActivo', usuario);
+            window.location.href = 'album.html';
+        } else {
+            mensaje.textContent = "Contraseña incorrecta";
+            mensaje.style.color = "red";
+        }
+    } else {
+        localStorage.setItem(key, JSON.stringify({usuario, password, figuritas: []}));
+        localStorage.setItem('usuarioActivo', usuario);
+        window.location.href = 'album.html';
+    }
   }
-}
 
-// Enter para enviar
-document.getElementById('password').addEventListener('keypress', e => {
-  if(e.key === 'Enter') registrarOLogin();
-});
-document.getElementById('usuario').addEventListener('keypress', e => {
-  if(e.key === 'Enter') registrarOLogin();
-});
+  // ==========================================
+  // Evento Enter para login
+  // ==========================================
+  document.getElementById('password').addEventListener('keypress', function(e) {
+      if(e.key === 'Enter') registrarOLogin();
+  });
+  document.getElementById('usuario').addEventListener('keypress', function(e) {
+      if(e.key === 'Enter') registrarOLogin();
+  });
 </script>
 
 </body>
