--- a/album.html
+++ b/album.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Álbum de Los LCDM</title>
 <link rel="stylesheet" href="style.css">
-<script src="codigos.js"></script>
 </head>
 <body>
 
@@ -20,54 +19,49 @@
 <div id="barra-superior">
     <span id="usuarioActivo"></span>
     <span id="contador">0 / 5 figuritas</span>
-    <div style="position: relative; display: inline-block;">
-        <button id="btnAyuda">Ayuda</button>
-        <!-- Tooltip moderno -->
-        <div id="tooltipAyuda">
-            <div class="tooltipFlecha"></div>
-            <div class="tooltipContenido">
-                <h3>Ayuda / Reglas</h3>
-                <p>
-                    1. Puedes coleccionar hasta 5 figuritas por día.<br>
-                    2. Haz clic en cada figurita para ver su contenido.<br>
-                    3. ¡Disfruta del álbum y comparte con tus amigos!<br>
-                    4. Este texto es más largo para mostrar cómo se ve la barra de desplazamiento.<br>
-                    5. Sigue agregando más reglas si es necesario para que se active el scroll.<br>
-                    6. Recuerda que puedes personalizar todo el contenido.<br>
-                    7. Y puedes agregar imágenes si quieres.
-                </p>
-            </div>
-        </div>
-    </div>
-    <button id="btnReiniciar">Completar</button>
+    <button id="btnReiniciar">Reiniciar Álbum</button>
     <button id="btnLogout">Cerrar Sesión</button>
 </div>
+	<div id="qrs"></div>
+
+<script>
+Object.keys(codigosQR).forEach(clave => {
+    const div = document.createElement("div");
+    div.style.margin = "20px";
+    div.innerHTML = `<h3>${codigosQR[clave]}</h3>`;
+    document.getElementById("qrs").appendChild(div);
+
+    new QRCode(div, {
+        text: clave, // este es el contenido que leerá el escáner
+        width: 128,
+        height: 128
+    });
+});
+</script>
+
 
 <!-- Contenedor del álbum -->
 <div id="album-container">
     <h1>Mi Álbum de Figuritas</h1>
-    <div class="figuritas" id="figuritasContainer"></div>
+    <div class="figuritas">
+        <div class="figurita" id="fig1">Figurita 1</div>
+        <div class="figurita" id="fig2">Figurita 2</div>
+        <div class="figurita" id="fig3">Figurita 3</div>
+        <div class="figurita" id="fig4">Figurita 4</div>
+        <div class="figurita" id="fig5">Figurita 5</div>
+    </div>
 </div>
 
 <!-- Escaneo QR -->
 <div class="qr-section">
-    <div id="qr-reader"></div>
-    <button id="btnScanQR" onclick="iniciarScanner()">📷 Escanear QR</button>
-</div>
-
-<!-- Notificaciones -->
-<div id="toast"></div>
-
-<!-- Overlay completado -->
-<div id="completado-overlay">
-  <h1>🎉 ¡Felicidades!</h1>
-  <p>Completaste el álbum de Los LCDM</p>
+    <div id="qr-reader" style="width:300px; margin:20px auto;"></div>
+    <button onclick="iniciarScanner()">📷 Escanear QR</button>
 </div>
 
 <!-- Scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <script src="https://unpkg.com/html5-qrcode"></script>
-<script src="script.js"></script>
 <script src="qr.js"></script>
-
+<script src="script.js"></script>
 </body>
 </html>
